<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <GVL Name="HMICA1" Id="{6126c6c3-5fb0-431b-934c-67b3f6812120}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Inicio_calibracion			:BOOL;
	Pausa_calibracion			:BOOL;
	VaciarProbeta_calibracion	:BOOL;//probeta llena	
	Fin_calibracion				:BOOL;
	Error_promedio				:REAL;
	Continuar_calibracion		:BOOL;
	Volumen_calibracion			:ARRAY[1..3]OF REAL;
	Tiempo_calibracion			:ARRAY[1..3]OF DINT;
	Peso_calibracion			:REAL;
	Dosis_calibracion			:REAL;
	VolumenPedido_calibracion	:REAL;
	Tolerancia_calibracion		:REAL;
	TInyeccion_calibracion		:DINT;
	VolMaxProbeta_calibracion	:REAL;
	Vol_enProbeta				:REAL;
	TiempoInyectado				:DINT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>